// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetDataPacket should match snapshot 1`] = `
Object {
  "AccessControlInfo": Object {
    "EntryCode": "99999",
  },
  "Devices": Array [
    Object {
      "Address": "AC123",
      "AutomaticFirmwareUpdate": true,
      "Comments": null,
      "Description": "AC",
      "DeviceID": 60001,
      "DeviceModel": "HPA-4911",
      "DeviceModelID": 15,
      "FirmwareVersion": "1.0.0.17",
      "HomeID": 10005,
      "IsOnline": true,
      "NewFirmwareAvailable": false,
      "NumberOfEndpoints": 1,
      "Parameters": null,
      "PrivateKey": "XXXXXXXXY1",
      "ScriptObjectID": null,
      "TechnologyID": 5,
    },
  ],
  "EndpointValues": Array [
    Object {
      "EndpointID": 70001,
      "Values": Array [
        Object {
          "Value": "22",
          "ValueType": 13,
        },
        Object {
          "Value": "0",
          "ValueType": 14,
        },
        Object {
          "Value": "3",
          "ValueType": 15,
        },
        Object {
          "Value": "0",
          "ValueType": 16,
        },
        Object {
          "Value": "0",
          "ValueType": 17,
        },
        Object {
          "Value": "0",
          "ValueType": 18,
        },
        Object {
          "Value": "24",
          "ValueType": 20,
        },
        Object {
          "Value": "80",
          "ValueType": 59,
        },
        Object {
          "Value": "3909",
          "ValueType": 60,
        },
        Object {
          "Value": "71",
          "ValueType": 61,
        },
        Object {
          "Value": "0",
          "ValueType": 62,
        },
      ],
    },
  ],
  "Endpoints": Array [
    Object {
      "Address": "1",
      "Capabilities": 2555264,
      "Description": "AC",
      "DeviceAddress": "AC123",
      "DeviceID": 60001,
      "DeviceModelDesc": "HPA-4911",
      "EndpointID": 70001,
      "EndpointModelDesc": null,
      "EndpointType": 12,
      "Functional": true,
      "Groups": Array [
        Object {
          "Description": "Living",
          "GroupID": 20001,
          "HomeID": 10005,
        },
      ],
      "HomeID": 10005,
      "IsEditable": true,
      "MeteringUnitID": 0,
      "Parameters": Array [
        Object {
          "Name": "ConfiguredSensors",
          "Value": "0",
        },
        Object {
          "Name": "IRProtocolCode",
          "Value": "30",
        },
        Object {
          "Name": "RoomTemperatureOffset",
          "Value": "-400",
        },
        Object {
          "Name": "SetpointMaxC",
          "Value": "30",
        },
        Object {
          "Name": "SetpointMinC",
          "Value": "17",
        },
      ],
      "ScriptObjectID": null,
    },
  ],
  "Groups": Array [
    Object {
      "Description": "Living",
      "GroupID": 20001,
      "HomeID": 10005,
    },
  ],
  "Home": Object {
    "Description": "Home",
    "HomeID": 10005,
    "InvitedBy": "",
    "IsDefault": true,
    "IsOnline": true,
    "IsOwner": true,
    "Location": Object {
      "CityName": null,
      "CountryName": null,
      "Latitude": null,
      "Longitude": null,
      "Radius": 500,
      "StateName": null,
    },
    "RemoteAccessKey": "XXXXXXXXY2",
    "TimeZoneID": 1,
    "TimeZoneOffset": -180,
    "Virtual": true,
    "Weather": Object {
      "Temperature": null,
    },
  },
  "Macros": null,
  "NewSerials": Object {
    "Alarms": 0,
    "Devices": 1803500375,
    "EndpointValues": 1027422332,
    "Endpoints": 1561243994,
    "Groups": 1766414354,
    "Home": 1480175878,
    "Macros": 487638952,
    "Notifications": 487638952,
    "Scenes": 218289185,
  },
  "ResponseStatus": Object {
    "Messages": Array [],
    "Status": 0,
  },
  "Scenes": Array [
    Object {
      "Description": "A",
      "EndpointValues": Array [
        Object {
          "EndpointID": 70001,
          "Values": Array [
            Object {
              "Value": "0",
              "ValueType": 14,
            },
            Object {
              "Value": "255",
              "ValueType": 15,
            },
            Object {
              "Value": "-327.68",
              "ValueType": 20,
            },
          ],
        },
      ],
      "Geofence": Object {
        "OnEnter": false,
        "OnExit": false,
        "RequiresConfirmation": false,
      },
      "Groups": Array [
        Object {
          "Description": "Living",
          "GroupID": 20001,
          "HomeID": 10005,
        },
      ],
      "HomeID": 10005,
      "SceneID": 8000,
      "Triggers": Array [
        Object {
          "Description": "at 04:00 hs everyday",
          "EndDate": Object {
            "Day": 0,
            "Month": 0,
            "Year": 0,
          },
          "Frequency": 0,
          "HomeID": 10005,
          "IntervalMinutes": 0,
          "MonthDayNumber": 0,
          "MonthWeek": 0,
          "MonthWeekDay": 0,
          "OffsetMinutes": 0,
          "OnApril": false,
          "OnAugust": false,
          "OnDecember": false,
          "OnFebruary": false,
          "OnFriday": true,
          "OnJanuary": false,
          "OnJuly": false,
          "OnJune": false,
          "OnMarch": false,
          "OnMay": false,
          "OnMonday": true,
          "OnNovember": false,
          "OnOctober": false,
          "OnSaturday": true,
          "OnSeptember": false,
          "OnSunday": true,
          "OnThursday": true,
          "OnTuesday": true,
          "OnWednesday": true,
          "RepeatForMinutes": 0,
          "RepeatUntilTime": Object {
            "Hour": 0,
            "Millisecond": 0,
            "Minute": 0,
            "Second": 0,
          },
          "RepetitionsLeft": 0,
          "RunningTime": Object {
            "Hour": 4,
            "Millisecond": 0,
            "Minute": 0,
            "Second": 0,
          },
          "StartDate": Object {
            "Day": 0,
            "Month": 0,
            "Year": 0,
          },
          "TimeType": 3,
          "TriggerID": 4001,
          "TriggerSourceID": 0,
          "TriggerType": 2,
          "TriggersExecutionID": 0,
        },
      ],
      "TriggersAreEnabled": false,
    },
    Object {
      "Description": "B",
      "EndpointValues": Array [
        Object {
          "EndpointID": 70001,
          "Values": Array [
            Object {
              "Value": "0",
              "ValueType": 14,
            },
            Object {
              "Value": "255",
              "ValueType": 15,
            },
            Object {
              "Value": "-327.68",
              "ValueType": 20,
            },
          ],
        },
      ],
      "Geofence": Object {
        "OnEnter": false,
        "OnExit": false,
        "RequiresConfirmation": false,
      },
      "Groups": Array [
        Object {
          "Description": "Living",
          "GroupID": 20001,
          "HomeID": 10005,
        },
      ],
      "HomeID": 10005,
      "SceneID": 70001,
      "Triggers": Array [
        Object {
          "Description": "at 08:30 hs everyday",
          "EndDate": Object {
            "Day": 0,
            "Month": 0,
            "Year": 0,
          },
          "Frequency": 0,
          "HomeID": 10005,
          "IntervalMinutes": 0,
          "MonthDayNumber": 0,
          "MonthWeek": 0,
          "MonthWeekDay": 0,
          "OffsetMinutes": 0,
          "OnApril": false,
          "OnAugust": false,
          "OnDecember": false,
          "OnFebruary": false,
          "OnFriday": true,
          "OnJanuary": false,
          "OnJuly": false,
          "OnJune": false,
          "OnMarch": false,
          "OnMay": false,
          "OnMonday": true,
          "OnNovember": false,
          "OnOctober": false,
          "OnSaturday": true,
          "OnSeptember": false,
          "OnSunday": true,
          "OnThursday": true,
          "OnTuesday": true,
          "OnWednesday": true,
          "RepeatForMinutes": 0,
          "RepeatUntilTime": Object {
            "Hour": 0,
            "Millisecond": 0,
            "Minute": 0,
            "Second": 0,
          },
          "RepetitionsLeft": 0,
          "RunningTime": Object {
            "Hour": 8,
            "Millisecond": 0,
            "Minute": 30,
            "Second": 0,
          },
          "StartDate": Object {
            "Day": 0,
            "Month": 0,
            "Year": 0,
          },
          "TimeType": 3,
          "TriggerID": 4002,
          "TriggerSourceID": 0,
          "TriggerType": 2,
          "TriggersExecutionID": 0,
        },
      ],
      "TriggersAreEnabled": false,
    },
  ],
}
`;

exports[`getDevices should match snapshot 1`] = `
Array [
  Object {
    "Address": "1",
    "Capabilities": 2555264,
    "Description": "AC",
    "DeviceAddress": "AC123",
    "DeviceID": 60001,
    "DeviceModelDesc": "HPA-4911",
    "EndpointID": 70001,
    "EndpointModelDesc": null,
    "EndpointType": 12,
    "Functional": true,
    "Groups": Array [
      Object {
        "Description": "Living",
        "GroupID": 20001,
        "HomeID": 10005,
      },
    ],
    "HomeID": 10005,
    "IsEditable": true,
    "MeteringUnitID": 0,
    "Parameters": Array [
      Object {
        "Name": "ConfiguredSensors",
        "Value": "0",
      },
      Object {
        "Name": "IRProtocolCode",
        "Value": "30",
      },
      Object {
        "Name": "RoomTemperatureOffset",
        "Value": "-400",
      },
      Object {
        "Name": "SetpointMaxC",
        "Value": "30",
      },
      Object {
        "Name": "SetpointMinC",
        "Value": "17",
      },
    ],
    "ScriptObjectID": null,
    "device": Object {
      "Address": "AC123",
      "AutomaticFirmwareUpdate": true,
      "Comments": null,
      "Description": "AC",
      "DeviceID": 60001,
      "DeviceModel": "HPA-4911",
      "DeviceModelID": 15,
      "FirmwareVersion": "1.0.0.17",
      "HomeID": 10005,
      "IsOnline": true,
      "NewFirmwareAvailable": false,
      "NumberOfEndpoints": 1,
      "Parameters": null,
      "PrivateKey": "XXXXXXXXY1",
      "ScriptObjectID": null,
      "TechnologyID": 5,
    },
    "endpointParameters": Object {
      "maxTemp": "30",
      "minTemp": "17",
    },
    "endpointValues": Object {
      "currentTemp": "22",
      "desiredTempC": "24",
      "fanMode": "3",
      "mode": "0",
      "swingMode": 0,
    },
    "rawEndpointValues": Object {
      "EndpointID": 70001,
      "Values": Array [
        Object {
          "Value": "22",
          "ValueType": 13,
        },
        Object {
          "Value": "0",
          "ValueType": 14,
        },
        Object {
          "Value": "3",
          "ValueType": 15,
        },
        Object {
          "Value": "0",
          "ValueType": 16,
        },
        Object {
          "Value": "0",
          "ValueType": 17,
        },
        Object {
          "Value": "0",
          "ValueType": 18,
        },
        Object {
          "Value": "24",
          "ValueType": 20,
        },
        Object {
          "Value": "80",
          "ValueType": 59,
        },
        Object {
          "Value": "3909",
          "ValueType": 60,
        },
        Object {
          "Value": "71",
          "ValueType": 61,
        },
        Object {
          "Value": "0",
          "ValueType": 62,
        },
      ],
    },
  },
  Object {
    "Address": "1",
    "Capabilities": 2555264,
    "Description": "AC",
    "DeviceAddress": "AC123",
    "DeviceID": 60001,
    "DeviceModelDesc": "HPA-4911",
    "EndpointID": 70001,
    "EndpointModelDesc": null,
    "EndpointType": 12,
    "Functional": true,
    "Groups": Array [
      Object {
        "Description": "Living",
        "GroupID": 20001,
        "HomeID": 10005,
      },
    ],
    "HomeID": 10005,
    "IsEditable": true,
    "MeteringUnitID": 0,
    "Parameters": Array [
      Object {
        "Name": "ConfiguredSensors",
        "Value": "0",
      },
      Object {
        "Name": "IRProtocolCode",
        "Value": "30",
      },
      Object {
        "Name": "RoomTemperatureOffset",
        "Value": "-400",
      },
      Object {
        "Name": "SetpointMaxC",
        "Value": "30",
      },
      Object {
        "Name": "SetpointMinC",
        "Value": "17",
      },
    ],
    "ScriptObjectID": null,
    "device": Object {
      "Address": "AC123",
      "AutomaticFirmwareUpdate": true,
      "Comments": null,
      "Description": "AC",
      "DeviceID": 60001,
      "DeviceModel": "HPA-4911",
      "DeviceModelID": 15,
      "FirmwareVersion": "1.0.0.17",
      "HomeID": 10005,
      "IsOnline": true,
      "NewFirmwareAvailable": false,
      "NumberOfEndpoints": 1,
      "Parameters": null,
      "PrivateKey": "XXXXXXXXY1",
      "ScriptObjectID": null,
      "TechnologyID": 5,
    },
    "endpointParameters": Object {
      "maxTemp": "30",
      "minTemp": "17",
    },
    "endpointValues": Object {
      "currentTemp": "22",
      "desiredTempC": "24",
      "fanMode": "3",
      "mode": "0",
      "swingMode": 0,
    },
    "rawEndpointValues": Object {
      "EndpointID": 70001,
      "Values": Array [
        Object {
          "Value": "22",
          "ValueType": 13,
        },
        Object {
          "Value": "0",
          "ValueType": 14,
        },
        Object {
          "Value": "3",
          "ValueType": 15,
        },
        Object {
          "Value": "0",
          "ValueType": 16,
        },
        Object {
          "Value": "0",
          "ValueType": 17,
        },
        Object {
          "Value": "0",
          "ValueType": 18,
        },
        Object {
          "Value": "24",
          "ValueType": 20,
        },
        Object {
          "Value": "80",
          "ValueType": 59,
        },
        Object {
          "Value": "3909",
          "ValueType": 60,
        },
        Object {
          "Value": "71",
          "ValueType": 61,
        },
        Object {
          "Value": "0",
          "ValueType": 62,
        },
      ],
    },
  },
]
`;

exports[`getDevicesForHomeId should match snapshot 1`] = `
Array [
  Object {
    "Address": "1",
    "Capabilities": 2555264,
    "Description": "AC",
    "DeviceAddress": "AC123",
    "DeviceID": 60001,
    "DeviceModelDesc": "HPA-4911",
    "EndpointID": 70001,
    "EndpointModelDesc": null,
    "EndpointType": 12,
    "Functional": true,
    "Groups": Array [
      Object {
        "Description": "Living",
        "GroupID": 20001,
        "HomeID": 10005,
      },
    ],
    "HomeID": 10005,
    "IsEditable": true,
    "MeteringUnitID": 0,
    "Parameters": Array [
      Object {
        "Name": "ConfiguredSensors",
        "Value": "0",
      },
      Object {
        "Name": "IRProtocolCode",
        "Value": "30",
      },
      Object {
        "Name": "RoomTemperatureOffset",
        "Value": "-400",
      },
      Object {
        "Name": "SetpointMaxC",
        "Value": "30",
      },
      Object {
        "Name": "SetpointMinC",
        "Value": "17",
      },
    ],
    "ScriptObjectID": null,
    "device": Object {
      "Address": "AC123",
      "AutomaticFirmwareUpdate": true,
      "Comments": null,
      "Description": "AC",
      "DeviceID": 60001,
      "DeviceModel": "HPA-4911",
      "DeviceModelID": 15,
      "FirmwareVersion": "1.0.0.17",
      "HomeID": 10005,
      "IsOnline": true,
      "NewFirmwareAvailable": false,
      "NumberOfEndpoints": 1,
      "Parameters": null,
      "PrivateKey": "XXXXXXXXY1",
      "ScriptObjectID": null,
      "TechnologyID": 5,
    },
    "endpointParameters": Object {
      "maxTemp": "30",
      "minTemp": "17",
    },
    "endpointValues": Object {
      "currentTemp": "22",
      "desiredTempC": "24",
      "fanMode": "3",
      "mode": "0",
      "swingMode": 0,
    },
    "rawEndpointValues": Object {
      "EndpointID": 70001,
      "Values": Array [
        Object {
          "Value": "22",
          "ValueType": 13,
        },
        Object {
          "Value": "0",
          "ValueType": 14,
        },
        Object {
          "Value": "3",
          "ValueType": 15,
        },
        Object {
          "Value": "0",
          "ValueType": 16,
        },
        Object {
          "Value": "0",
          "ValueType": 17,
        },
        Object {
          "Value": "0",
          "ValueType": 18,
        },
        Object {
          "Value": "24",
          "ValueType": 20,
        },
        Object {
          "Value": "80",
          "ValueType": 59,
        },
        Object {
          "Value": "3909",
          "ValueType": 60,
        },
        Object {
          "Value": "71",
          "ValueType": 61,
        },
        Object {
          "Value": "0",
          "ValueType": 62,
        },
      ],
    },
  },
]
`;

exports[`getDevicesForHomeId should match snapshot 2`] = `
Array [
  Object {
    "Address": "1",
    "Capabilities": 2555264,
    "Description": "AC",
    "DeviceAddress": "AC123",
    "DeviceID": 60001,
    "DeviceModelDesc": "HPA-4911",
    "EndpointID": 70001,
    "EndpointModelDesc": null,
    "EndpointType": 12,
    "Functional": true,
    "Groups": Array [
      Object {
        "Description": "Living",
        "GroupID": 20001,
        "HomeID": 10005,
      },
    ],
    "HomeID": 10005,
    "IsEditable": true,
    "MeteringUnitID": 0,
    "Parameters": Array [
      Object {
        "Name": "ConfiguredSensors",
        "Value": "0",
      },
      Object {
        "Name": "IRProtocolCode",
        "Value": "30",
      },
      Object {
        "Name": "RoomTemperatureOffset",
        "Value": "-400",
      },
      Object {
        "Name": "SetpointMaxC",
        "Value": "30",
      },
      Object {
        "Name": "SetpointMinC",
        "Value": "17",
      },
    ],
    "ScriptObjectID": null,
    "device": Object {
      "Address": "AC123",
      "AutomaticFirmwareUpdate": true,
      "Comments": null,
      "Description": "AC",
      "DeviceID": 60001,
      "DeviceModel": "HPA-4911",
      "DeviceModelID": 15,
      "FirmwareVersion": "1.0.0.17",
      "HomeID": 10005,
      "IsOnline": true,
      "NewFirmwareAvailable": false,
      "NumberOfEndpoints": 1,
      "Parameters": null,
      "PrivateKey": "XXXXXXXXY1",
      "ScriptObjectID": null,
      "TechnologyID": 5,
    },
    "endpointParameters": Object {
      "maxTemp": "30",
      "minTemp": "17",
    },
    "endpointValues": Object {
      "currentTemp": "22",
      "desiredTempC": "24",
      "fanMode": "3",
      "mode": "0",
      "swingMode": 0,
    },
    "rawEndpointValues": Object {
      "EndpointID": 70001,
      "Values": Array [
        Object {
          "Value": "22",
          "ValueType": 13,
        },
        Object {
          "Value": "0",
          "ValueType": 14,
        },
        Object {
          "Value": "3",
          "ValueType": 15,
        },
        Object {
          "Value": "0",
          "ValueType": 16,
        },
        Object {
          "Value": "0",
          "ValueType": 17,
        },
        Object {
          "Value": "0",
          "ValueType": 18,
        },
        Object {
          "Value": "24",
          "ValueType": 20,
        },
        Object {
          "Value": "80",
          "ValueType": 59,
        },
        Object {
          "Value": "3909",
          "ValueType": 60,
        },
        Object {
          "Value": "71",
          "ValueType": 61,
        },
        Object {
          "Value": "0",
          "ValueType": 62,
        },
      ],
    },
  },
]
`;

exports[`getHomes should match snapshot 1`] = `
Array [
  Object {
    "Description": "DemoHome",
    "HomeID": 10005,
    "InvitedBy": null,
    "IsDefault": false,
    "IsOnline": true,
    "IsOwner": true,
    "Location": Object {
      "CityName": null,
      "CountryName": null,
      "Latitude": null,
      "Longitude": null,
      "Radius": 500,
      "StateName": null,
    },
    "RemoteAccessKey": "XXXXXXXX01",
    "TimeZoneID": 1,
    "TimeZoneOffset": -180,
    "Virtual": true,
    "Weather": Object {
      "Temperature": null,
    },
  },
  Object {
    "Description": "Home",
    "HomeID": 10006,
    "InvitedBy": null,
    "IsDefault": true,
    "IsOnline": true,
    "IsOwner": true,
    "Location": Object {
      "CityName": null,
      "CountryName": null,
      "Latitude": null,
      "Longitude": null,
      "Radius": 500,
      "StateName": null,
    },
    "RemoteAccessKey": "XXXXXXXX02",
    "TimeZoneID": 1,
    "TimeZoneOffset": -180,
    "Virtual": true,
    "Weather": Object {
      "Temperature": null,
    },
  },
]
`;
